5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1642_2731.log
== TEST (2019-04-27 13:05:05) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2
c2 = x**2-2ax+a**2+y**2-2by+b**2==r**2

if():
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
File "XXXX", line 6
    c2 = x**2-2ax+a**2+y**2-2by+b**2==r**2
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:07:13) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2
c2 = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==(r**2)

if(c2):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
File "XXXX", line 6
    c2 = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==(r**2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:07:28) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2
c2 = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==r**2

if(c2):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
File "XXXX", line 6
    c2 = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==r**2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:53:24) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2
x = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==r**2

if(x > 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
File "XXXX", line 6
    x = (x**2)-(2ax+a**2)+(y**2)-(2by+b**2)==r**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:54:32) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2
x = ((x**2)-(2*ax+a**2))+((y**2)-(2*by+b**2))==r**2

if(x > 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((x-a)**2) + ((y-b)**2) == r**2
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:57:07) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = ((x-a)**2) + ((y-b)**2) == r**2

if(c > 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = ((x-a)**2) + ((y-b)**2) == r**2
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:57:34) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

c = (((x-a)**2) + ((y-b)**2)) == r**2

if(c > 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = (((x-a)**2) + ((y-b)**2)) == r**2
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:23:49) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a>0 and b>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:24:23) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a>0 and b>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:24:38) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a>0 and b>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.292269
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:27:27) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a>0 and b<0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:27:54) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a<0 and b<0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:28:20) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a<0 and b<0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.159261
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:29:02) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a<0 and b<0 and r>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:29:14) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a<0 and b<0 and r>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.156963
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:30:21) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(r>0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:30:38) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(r<0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:30:49) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(r<0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.13418
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 21:31:43) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(r==0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 21:32:04) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(r==0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.17831
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 09:19:34) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a==b):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:15:54) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a > 0 and b > 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:17:39) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a >= 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.13281
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:17:53) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a >= 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:18:10) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a >= 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.152713
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:18:22) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a >= 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:18:46) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a >= 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.230114
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 23:34:34) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a != 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 23:35:00) 
-- CODE:
a = float(input("digite a: "))
b = float(input("digite b: "))
r = float(input("digite r: "))

if(a != 0 and b >= 0):
	mensagem = "Superiores"
else:
	mensagem = "Inferiores"
	
print(mensagem)

-- EXECUTION TIME:
0.201383
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
